Merged in localisation (pull request #130)
Localisation

* course semester unique index

* set status

* missing localisations

* message correction

* query correction

* fix localisation

* remove commented code

* commented code removal

* fetch type lazy is default

* config


Approved-by: Gaurang Patel
Approved-by: Asif